Remove z-index. No longer needed

--- a/bs5/sass/pages/_merchdetail.scss
+++ b/bs5/sass/pages/_merchdetail.scss
@@ -133,7 +133,6 @@ span.btn-default.typeSelected {
       @supports (display: flex) {
         width: auto;
         flex: 1 100%;
-        z-index: 10;
       }
     }
 
